# clockpipe

./: .gitignore  Cargo.toml  Dockerfile  README.md  build-docker-image.sh  clockpipe.service  docker-compose.yml  example.json  test.http
docs/: README.md
docs/clickhouse/: README.md
docs/mongodb/: README.md
docs/postgres/: README.md
src/: command.rs  config.rs  errors.rs  interface.rs  logger.rs  main.rs  pipe.rs
src/adapter/: clickhouse.rs  convert.rs  interface.rs  mapper.rs  mod.rs  mongodb.rs  mysql.rs  postgres.rs
src/adapter/postgres/: mapper.rs  pgoutput.rs
src/exporters/: ddl_mapper.rs  mod.rs  postgres.rs
src/pipes/: mod.rs  mongodb.rs  postgres.rs
src/postgres/: mod.rs
