[package]
name = "clockpipe"
version = "0.1.0"
edition = "2024"
license = "MIT" 
authors = ["myyrakle <sssang97@naver.com>"] 
description = "ready" 
keywords = [] 
include = ["src/*", "Cargo.toml"]
exclude = []
readme = "README.md" 
repository = "https://github.com/myyrakle/clockpipe"
documentation = "https://github.com/myyrakle/clockpipe/blob/master/README.md"
homepage = "https://github.com/myyrakle/clockpipe/blob/master/README.md"

[dependencies]
async-trait = "0.1.88"
tokio = { version="1.46.1", features=["full"] }
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.142"
clickhouse = "0.13.3"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres"] }