[package]
name = "clockpipe"
version = "0.6.0"
edition = "2024"
license = "MIT" 
authors = ["myyrakle <sssang97@naver.com>"] 
description = "Clickhouse Data Synchronization Pipeline" 
keywords = ["clickhouse", "postgresql", "mongodb"] 
include = ["src/*", "Cargo.toml"]
exclude = []
readme = "README.md" 
repository = "https://github.com/myyrakle/clockpipe"
documentation = "https://github.com/myyrakle/clockpipe/blob/master/README.md"
homepage = "https://github.com/myyrakle/clockpipe/blob/master/README.md"

[dependencies]
async-trait = "0.1.88"
tokio = { version="1.46.1", features=["full"] }
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.142"
clickhouse = "0.13.3"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "macros"] }
byteorder = "1.5.0"
log = "0.4"
env_logger = "0.11.8"
tokio-postgres = { version = "0.7.13", features = ["with-serde_json-1"] }
futures = "0.3.31"
mongodb = "3.2.4"
chrono = "0.4.41"
base64 = "0.22.1"
itertools = "0.14.0"
